2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c: Removed alloc/dealloc of road_t.
	* src/point.c:
	* src/point.h:
	* src/pointstring.c:
	* src/pointstring.h: Removed, since road_t now has a basic GArray of mappoint_t objects.
	* src/*.c: Use new road_t format.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/locationselection.c:
	* src/locationselection.h:
	* src/track.c:
	* src/track.h: Removed these unused files.
	* src/map_draw_gdk.c:
	* src/mainwindow.c: Commented out track code.
	* src/animator.c:
	* src/downloader.c: Removed unused init() functions.
	* src/main.c: Removed calls to *_init() for above.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/downloader.c: Added.  This provides an easy interface to asyncronous file downloads.

2005-09-29  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map_style.c: Removed "constants"-- found out that XML already has this feature!
	* src/glyph.c: Don't load the same image twice.  Allow loading at image's native resolution.
	* src/map_draw_gdk.c: Can now fill polygons with a tiled image.  Beginning support for moving POI to the layers.XML file.
	* src/util.c: Add code for GtkEntry "hints".  These are messages shown when there is nothing in the entry.  May be used for search box.

2005-09-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* data/help/roadster-help.xml:
	* data/help/legal.xml:
	* data/help/figures/window_layout.png: Added the basics of a help system.

	* src/db.c: Removed debug stuff.
	* src/glyph.c: Added glyph drawing (via gdk/pixbufs).
	* src/location.c: Added location attribute name inserting / retrieving.
	* src/locationset.c: Added 'icon' field.
	* src/main.c: Add some debug code to insert test POI data.
	* src/search.c: Removed knowledge of search result type icons.  Now each type can provide its own.
	* src/search_*.c: Provide an icon suggestion along with results.
	* src/map.c: