@@ -28,8 +28,6 @@
 #include "main.h"
 #include "db.h"
 #include "util.h"
-#include "pointstring.h"
-#include "point.h"
 #include "search.h"
 #include "search_road.h"
 #include "road.h"
@@ -351,7 +349,8 @@ void search_road_on_roadsearch_struct(const roadsearch_t* pRoadSearch)
 			if(nCount <= SEARCH_RESULT_COUNT_LIMIT) {
 
 				GArray* pMapPointsArray = g_array_new(FALSE, FALSE, sizeof(mappoint_t));
-				db_parse_wkb_linestring(aRow[3], pMapPointsArray);
+				maprect_t r;
+				db_parse_wkb_linestring(aRow[3], pMapPointsArray, &r);
 				search_road_filter_result(aRow[1], pRoadSearch->nNumber, atoi(aRow[2]), atoi(aRow[4]), atoi(aRow[5]), atoi(aRow[6]), atoi(aRow[7]), aRow[8], aRow[9], aRow[10], aRow[11], aRow[12], aRow[13], pMapPointsArray);
 				//g_print("%03d: Road.ID='%s' RoadName.Name='%s', Suffix=%s, L:%s-%s, R:%s-%s\n", nCount, aRow[0], aRow[1], aRow[3], aRow[4], aRow[5], aRow[6], aRow[7]);
 				
